# RICE

./: Cargo.toml
src/server/: main.rs
src/server/configuration/: mod.rs
src/server/db/: mod.rs
src/server/messages/: commands.rs  message.rs  parser.rs  responses.rs
src/server/server/: mod.rs  threading.rs
